Add option to select one of gorm implementation

--- a/grails-forge-api/src/test/resources/features_es.properties
+++ b/grails-forge-api/src/test/resources/features_es.properties
@@ -1,3 +1,4 @@
 grails.forge.application-types.web.description=Una aplicación web de marco Grails®
+grails.forge.features.asciidoctor.description=Agrega soporte para crear documentación de Asciidoctor
 grails.forge.features.gorm-mongodb.description=Configura Gorm para MongoDB para aplicaciones groovy
 grails.forge.features.asset-pipeline-grails.description=El activo-Pipeline es un complemento utilizado para administrar y procesar activos estáticos en aplicaciones JVM principalmente a través de Gradle (sin embargo, no es obligatorio). Leer más en https
